crates/rome_formatter/tests/specs/prettier/js/comments/issue-3532.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 144
expression: issue-3532.js

---
# Input
```js
import React from 'react';

/*
import styled from 'react-emotion';

const AspectRatioBox = styled.div`
  &::before {
    content: '';
    width: 1px;
    margin-left: -1px;
    float: left;
    height: 0;
    padding-top: ${props => 100 / props.aspectRatio}%;
  }

  &::after {
    /* To clear float *//*
    content: '';
    display: table;
    clear: both;
  }
`;
*/

const AspectRatioBox = ({
  aspectRatio,
  children,
  ...props
}) => (
  <div
    className={`height: 0;
  overflow: hidden;
  padding-top: ${props => 100 / props.aspectRatio}%;
  background: white;
  position: relative;`}
  >
    <div>{children}</div>
  </div>
);

export default AspectRatioBox;

```

# Output
```js
import React from 'react';

/*
import styled from 'react-emotion';

const AspectRatioBox = styled.div`
  &::before {
    content: '';
    width: 1px;
    margin-left: -1px;
    float: left;
    height: 0;
    padding-top: ${props => 100 / props.aspectRatio}%;
  }

  &::after {
    /* To clear float */ /*
    content: '';
    display: table;
    clear: both;
  }
`;
*/

const AspectRatioBox = ({ aspectRatio, children, ...props }) =>
  (
  <div
    className={`height: 0;
<<<<<<< HEAD
overflow: hidden;
padding - top;
: $
{
  (props) => 100 / props.aspectRatio;
}
%
background: white;
position: relative;
`}
=======
  overflow: hidden;
  padding-top: ${props => 100 / props.aspectRatio}%;
  background: white;
  position: relative;`}
>>>>>>> 5e7841b546 (update rast/snap files)
  >
    <div>{children}</div>
  </div>
);

export default AspectRatioBox;
;

```

# Errors
```
error[SyntaxError]: JSX elements are a JSX only feature. Convert your file to a JSX file or remove the syntax.
   ┌─ issue-3532.js:30:3
   │  
30 │ ┌   <div
31 │ │     className={`height: 0;
<<<<<<< HEAD
   │ └─────────────^ This expression cannot be assigned to

error[SyntaxError]: expected a property, a shorthand property, a getter, a setter, or a method but instead found '`height'
   ┌─ issue-3532.js:31:16
   │
31 │     className={`height: 0;
   │                ^^^^^^^ Expected a property, a shorthand property, a getter, a setter, or a method here

error[SyntaxError]: expected `,` but instead found `:`
   ┌─ issue-3532.js:31:23
   │
31 │     className={`height: 0;
   │                       ^ unexpected

error[SyntaxError]: expected `,` but instead found `;`
   ┌─ issue-3532.js:31:26
   │
31 │     className={`height: 0;
   │                          ^ unexpected

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
   ┌─ issue-3532.js:33:14
   │
33 │   padding-top: ${props => 100 / props.aspectRatio}%;
   │   -----------^
   │   │          │
   │   │          An explicit or implicit semicolon is expected here...
   │   ...Which is required to end this statement

error[SyntaxError]: expected a statement but instead found '%'
   ┌─ issue-3532.js:33:51
   │
33 │   padding-top: ${props => 100 / props.aspectRatio}%;
   │                                                   ^ Expected a statement here

error: unterminated template literal
   ┌─ issue-3532.js:35:23
   │  
35 │     position: relative;`}
   │ ┌───────────────────────^
36 │ │   >
37 │ │     <div>{children}</div>
38 │ │   </div>
   · │
41 │ │ export default AspectRatioBox;
42 │ │ 
   │ └^

error[SyntaxError]: Invalid template literal
   ┌─ issue-3532.js:35:23
   │  
35 │     position: relative;`}
   │ ┌───────────────────────^
36 │ │   >
37 │ │     <div>{children}</div>
38 │ │   </div>
   · │
41 │ │ export default AspectRatioBox;
42 │ │ 
   │ └^
=======
32 │ │   overflow: hidden;
33 │ │   padding-top: ${props => 100 / props.aspectRatio}%;
   · │
38 │ │   </div>
39 │ │ );
   │ └─^ JSX only syntax
>>>>>>> 5e7841b546 (update rast/snap files)


```


